ember-bdi/tests/macros/compile-fail/from_term_union.stderr
error: FromTerm cannot be derived for unions
 --> tests/macros/compile-fail/from_term_union.rs:5:7
  |
5 | union Bad {
  |       ^^^
